[gd_scene load_steps=28 format=3 uid="uid://dbnc22dbtij1b"]

[ext_resource type="Script" path="res://Stage Select.gd" id="1_12got"]
[ext_resource type="Texture2D" uid="uid://f2t4llyunh5p" path="res://DAAAN.png" id="2_e3akm"]
[ext_resource type="Texture2D" uid="uid://bsmpv4jywrai5" path="res://StageSelectImgs/test6.png" id="3_oebvs"]
[ext_resource type="Texture2D" uid="uid://bejkj71yubx4o" path="res://StageSelectImgs/test7.png" id="4_fmvt6"]
[ext_resource type="Texture2D" uid="uid://jawdmc3xurrj" path="res://StageSelectImgs/test8.jpg" id="5_v7yol"]
[ext_resource type="Texture2D" uid="uid://peqw1qojdks3" path="res://StageSelectImgs/test9.jpg" id="6_mhl03"]
[ext_resource type="Texture2D" uid="uid://bcuhofxeq0eah" path="res://StageSelectImgs/testX.jpg" id="7_dw4iy"]
[ext_resource type="Texture2D" uid="uid://cfig4dkdxs0k" path="res://Left Normal.png" id="8_gb8e1"]
[ext_resource type="Texture2D" uid="uid://dx517dksv1481" path="res://Left Press.png" id="9_tuish"]
[ext_resource type="Texture2D" uid="uid://1vdell0wdci5" path="res://Left Hover.png" id="10_fr6io"]
[ext_resource type="Texture2D" uid="uid://0bmyc760j5pp" path="res://Left Disabled.png" id="11_v3qvv"]
[ext_resource type="Texture2D" uid="uid://dpdoj0ynk86iq" path="res://Right Normal.png" id="12_xlgx8"]
[ext_resource type="Texture2D" uid="uid://tkb6v5433alu" path="res://Right Press.png" id="13_sspfj"]
[ext_resource type="Texture2D" uid="uid://jnrkuvwlt6fv" path="res://Right Hover.png" id="14_42xfu"]
[ext_resource type="Texture2D" uid="uid://dyo2sxr2hlqum" path="res://Right Disabled.png" id="15_t0mk0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rf3fm"]
bg_color = Color(0.290196, 0.431373, 0.929412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0ci3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kg2g1"]
bg_color = Color(0.909804, 0.101961, 0.317647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edvhb"]
bg_color = Color(0.909804, 0.101961, 0.317647, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.584314, 0.109804, 0.239216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wt6h0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trhmt"]
bg_color = Color(0, 0, 0, 0.294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1iqh4"]
bg_color = Color(0, 0, 0, 0.745098)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hky4o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okbyq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j1jjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjlsk"]
bg_color = Color(0.290196, 0.431373, 0.929412, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_heon2"]

[node name="StageSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12got")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_e3akm")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -392.0
offset_top = 24.0
offset_right = 376.0
offset_bottom = 472.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -224.0
offset_right = 384.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rf3fm")

[node name="Panel" type="Panel" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -208.0
offset_right = 368.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x0ci3")

[node name="GameplayImg" type="TextureRect" parent="Control/Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -208.0
offset_right = 368.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_oebvs")
expand_mode = 1

[node name="GameplayImg2" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -208.0
offset_right = 368.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fmvt6")
expand_mode = 1

[node name="GameplayImg3" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -208.0
offset_right = 368.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_v7yol")
expand_mode = 1

[node name="GameplayImg4" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -208.0
offset_right = 368.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mhl03")
expand_mode = 1

[node name="GameplayImg5" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -208.0
offset_right = 368.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_dw4iy")
expand_mode = 1

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -144.0
offset_right = 376.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="Txt Hold" type="Panel" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -64.0
offset_right = 308.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kg2g1")

[node name="Help Txt" type="Label" parent="Control2/Txt Hold"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -48.0
offset_right = 292.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_edvhb")
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="Button" type="Button" parent="Control2/Txt Hold"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -48.0
offset_right = 292.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_wt6h0")
theme_override_styles/hover = SubResource("StyleBoxFlat_trhmt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1iqh4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hky4o")

[node name="LButHold" type="Panel" parent="Control2"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 128.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_okbyq")

[node name="LeftBut" type="TextureButton" parent="Control2/LButHold"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
texture_normal = ExtResource("8_gb8e1")
texture_pressed = ExtResource("9_tuish")
texture_hover = ExtResource("10_fr6io")
texture_disabled = ExtResource("11_v3qvv")
ignore_texture_size = true
stretch_mode = 5

[node name="RButHold" type="Panel" parent="Control2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -56.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_j1jjw")

[node name="RightBut" type="TextureButton" parent="Control2/RButHold"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -60.0
offset_right = 32.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("12_xlgx8")
texture_pressed = ExtResource("13_sspfj")
texture_hover = ExtResource("14_42xfu")
texture_disabled = ExtResource("15_t0mk0")
ignore_texture_size = true
stretch_mode = 5

[node name="Control3" type="Control" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 72.0

[node name="Panel" type="Panel" parent="Control3"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xjlsk")

[node name="Back But" type="Button" parent="Control3/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -24.0
offset_right = 56.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_heon2")
text = "Back to Title"

[connection signal="pressed" from="Control2/LButHold/LeftBut" to="." method="_on_left_but_pressed"]
[connection signal="pressed" from="Control2/RButHold/RightBut" to="." method="_on_right_but_pressed"]
[connection signal="pressed" from="Control3/Panel/Back But" to="." method="_on_back_but_pressed"]
